[package]
name = "grass"
version = "0.1.0"
authors = ["elbaro <elbaro@users.noreply.github.com>"]
edition = "2018"

[dependencies]
clap = "2.32.0"
strfmt = "0.1.6"
env_logger = "0.6.1"
log = "0.4.6"
slog = "2.4.1"
slog-term = "2.4.0"
slog-async = "2.3.0"
pidlock = "0.1.2"
curl = "0.4.19"
uuid = {version="0.7.3", features=["v4"]}
serde_json = "1.0.39"
json5 = "0.2.4"
crossbeam = "0.7.1"
clone_all = "0.1.1"
serde = { version = "1.0.89", features = ["derive"] }
prettytable-rs = "0.8.0"
term = "0.5.1"
num = "0.2.0"
textwrap = "0.11.0"
preferences = "1.1.0"
self_update = "0.5.1"
app_dirs = "1.2.1"
toml = "0.5.0"
once_cell = "0.1.8"
chrono = {version="0.4.6", features=["serde"]}
tokio = {version="0.1.18", features=["async-await-preview"]}
tokio-process = "0.2.3"
futures01 = {package="futures",version="0.1.25"}
futures-preview = {version="0.3.0-alpha.13", features=["compat", "io-compat"]}
# tarpc = {git="https://github.com/elbaro/tarpc.git", features=["serde1"], rev="93402c5"}
# tarpc-bincode-transport = {git="https://github.com/elbaro/tarpc.git", rev="93402c5"}
tarpc = {features=["serde1"], path="../tarpc/tarpc"}
tarpc-bincode-transport = {path="../tarpc/bincode-transport"}
tokio-async-await = "0.1.6"
yamux = "0.1.9"
pin-utils = "0.1.0-alpha.4"
slog-scope = "4.1.1"
