[package]
name = "grass"
version = "0.0.3"
authors = ["elbaro <elbaro@users.noreply.github.com>"]
edition = "2018"
build = "build.rs"

[badges]
travis-ci = { repository = "elbaro/grass", branch = "master" }
codecov = { repository = "elbaro/grass", branch = "master", service = "github" }

[dependencies]
clap = "2.33.0"
strfmt = "0.1.6"
log = "0.4.6"
slog = "2.4.1"
slog-term = "2.4.0"
slog-async = "2.3.0"
pidlock = "0.1.2"
curl = "0.4.21"
uuid = {version="0.7.4", features=["v4"]}
serde_json = "1.0.39"
json5 = "0.2.4"
crossbeam = "0.7.1"
clone_all = "0.1.1"
serde = { version = "1.0.91", features = ["derive"] }
prettytable-rs = "0.8.0"
num = "0.2.0"
textwrap = "0.11.0"
preferences = "1.1.0"
self_update = "0.5.1"
app_dirs = "1.2.1"
toml = "0.5.1"
once_cell = "1.2.0"
chrono = {version="0.4.6", features=["serde"]}
tokio = "0.1.20"
tokio-process = "0.2.3"
futures01 = {package="futures",version="0.1.27"}
futures-preview = {version="0.3.0-alpha.16", features = ["nightly", "async-await"]}
tarpc = {git="https://github.com/elbaro/tarpc.git", features=["serde1"], branch="master"}
tarpc-bincode-transport = {git="https://github.com/elbaro/tarpc.git", branch="master"}
yamux = "0.2.1"
pin-utils = "0.1.0-alpha.4"
slog-scope = "4.1.1"
native-tls = "0.2.3"
tokio-tls = "0.2.1"
indexmap = "1.0.2"
failure = "0.1.5"
sys-info = "0.5.6"
colored = "1.8.0"
timeago = "0.2.0"
color-backtrace = "0.1.3"
tui = "0.6.0"
termion = "1.5.2"
lazy_static = "1.3.0"

[dev-dependencies]
timebomb = "0.1.2"

[build-dependencies]
vergen = "3"
